k8s-yaml/networkpolicy-busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-networkpolicy
  namespace: networkpolicy-test
  labels:
    app: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh','-c','while true; do sleep 5; done']
