k8s-yaml/networkpolicy-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: networkpolicy-test
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
