k8s-yaml/node-name.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodename-pod
spec:
  nodeName: k8s-node1
  containers:
  - name: nginx
    image: nginx:1.19.1
