k8s-yaml/resource-request-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi" 
      limits:
        cpu: "200m"
        memory: "128Mi"
