k8s-yaml/volumes-pv-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pv-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command:
      - sh
      - -c
      - echo "This is a PV success message" > /output/success.txt
    volumeMounts:
    - name: volume-pv
      mountPath: /output
  volumes:
  - name: volume-pv
    persistentVolumeClaim:
      claimName: volume-pvc
