k8s-yaml/volumes-shared-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-shared-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sh
      - -c
      - while true; do echo "Success" > /output/output.txt; sleep 5; done
    volumeMounts:
    - name: volume-shared
      mountPath: /output
  - name: busybox2
    image: busybox
    command:
      - sh
      - -c
      - while true; do cat /input/output.txt; sleep 5; done
    volumeMounts: 
    - name: volume-shared
      mountPath: /input
  volumes:
  - name: volume-shared
    emptyDir: {}
