k8s-yaml/nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
  namespace: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  type: ClusterIP
  selector:
    app: nginx-deployment
  ports:
    - name: nginx-ingress
      protocol: TCP
      port: 80
      targetPort: 80
